[project]
name = "rag-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-pinecone>=0.2.13",
    "python-dotenv>=1.2.1",
]
